tools/orc/tests/snapshots/test__test_limit_missing-0-linux.snap
---
source: tests/test.rs
expression: "String::from_utf8_lossy(cmd.get_output().stdout.as_slice())"
---
libraw.so -> [CARGO_MANIFEST_DIR]/.pixi/envs/default/lib/libraw.so.25.0.0
├── [RED]libc.so.6
├── libgcc_s.so.1
│   ├── [RED]ld-linux-x86-64.so.2
│   ╰── [RED]libc.so.6
├── libgomp.so.1 -> [CARGO_MANIFEST_DIR]/.pixi/envs/default/lib/libgomp.so.1.0.0
│   ├── [RED]libc.so.6
│   ├── [RED]libdl.so.2
│   ╰── [RED]libpthread.so.0
├── libjpeg.so.8 -> [RED][CARGO_MANIFEST_DIR]/.pixi/envs/default/lib/libjpeg.so.8.3.2
├── liblcms2.so.2 -> [CARGO_MANIFEST_DIR]/.pixi/envs/default/lib/liblcms2.so.2.0.19
│   ├── [RED]libc.so.6
│   ├── [RED]libm.so.6
│   ╰── [RED]libpthread.so.0
├── [RED]libm.so.6
├── libstdc++.so.6 -> [CARGO_MANIFEST_DIR]/.pixi/envs/default/lib/libstdc++.so.6.0.34
│   ├── [RED]ld-linux-x86-64.so.2
│   ├── [RED]libc.so.6
│   ├── [RED]libdl.so.2
│   ├── libgcc_s.so.1
│   │   ├── [RED]ld-linux-x86-64.so.2
│   │   ╰── [RED]libc.so.6
│   ╰── [RED]libm.so.6
╰── libz.so.1 -> [CARGO_MANIFEST_DIR]/.pixi/envs/default/lib/libz.so.1.3.2
    ╰── [RED]libc.so.6
